# lingo-key

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  explain.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  settings.html  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
landing/: .assetsignore  i18n.js  index.html  main.js  styles.css  wrangler.jsonc
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor.rs  input.rs  lib.rs  main.rs
src-tauri/src/commands/: api.rs  clipboard.rs  hotkey.rs  mod.rs  settings.rs  window.rs
src/components/ui/: Button.test.tsx  Button.tsx  Card.tsx  CopyButton.tsx  DiffHighlight.test.tsx  DiffHighlight.tsx  HotkeyInput.tsx  Input.tsx  Select.tsx  Slider.tsx  Spinner.tsx  Textarea.tsx  TitleBar.tsx  Toggle.tsx  Tooltip.tsx  WindowResizeHandles.tsx  index.ts
src/components/windows/: ExplainLayout.test.tsx  ExplainLayout.tsx  HistoryLayout.tsx  MainLayout.tsx  SettingsLayout.tsx
src/hooks/: useAppearance.ts  useClipboard.ts  useExplain.ts  useHistory.ts  useOptimize.ts  useSettings.ts  useWindow.ts
src/lib/: diff.test.ts  diff.ts  history.test.ts  history.ts  i18n.tsx  settings.test.ts  settings.ts  tauri.ts  utils.test.ts  utils.ts
src/types/: index.ts
src/windows/: explain.tsx  main.tsx  settings.tsx
