[package]
name = "lingokey"
version = "0.1.0"
description = "LingoKey - AI programming English assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "lingokey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
anyhow = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["dwmapi", "winuser"] }
